支持独立版bug修改